--- a/index.html
+++ b/index.html
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
-
-<!-- CHAPTER 3: CREATING A REACT COMPONENT <-done -->
-
 <html>
-  <head>
-    <meta charset="utf-8">
+    <!-- jQuery, jQuery.ui -->
+    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://code.jquery.com/jquery.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+
+    <!-- Bootstrap -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
+    <!-- React -->
     <script src="https://fb.me/react-0.13.3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script>
-    <title>React Basics</title>
-  </head>
-  <body>
+
+    <!--Custom Styles -->
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <title>React Bulletin Board</title>
+</head>
+<body>
     <div id="react-container"></div>
-    <script type="text/babel">
-      var MyComponent = React.createClass({
-        render: function() {
-          return <div>
-            <h1>{this.props.text}</h1>
-            <p>{this.props.children}</p>
-          </div>;
-        }
-      });
-      React.render(<div>
-                    <MyComponent text="Hello React">
-                      This is a child property.
-                    </MyComponent>
-                    <MyComponent text="Props are cool">
-                      This is another child property.
-                    </MyComponent>
-                   </div>, document.getElementById('react-container')
-                  );
-    </script>
-  </body>
+    <script src="js/Note.js" type="text/babel" ></script>
+</body>
 </html>
