--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8"/>
     <!-- jQuery, jQuery.ui -->
     <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery.min.js"></script>
@@ -16,9 +18,9 @@
     <!--Custom Styles -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <title>React Bulletin Board</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="react-container"></div>
     <script src="js/Note.js" type="text/babel" ></script>
-</body>
+  </body>
 </html>
